# phonebot_challenge

./: .env.example  .gitignore  LOOM_SCRIPT.md  README.md  compare.py  optimize.py  pyproject.toml  run.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.understand-anything/: knowledge-graph.json  meta.json
data/knowledge/: german_names.json
data/transcripts/: call_01.json  call_02.json  call_03.json  call_04.json  call_05.json  call_06.json  call_07.json  call_08.json  call_09.json  call_10.json  call_11.json  call_12.json  call_13.json  call_14.json  call_15.json  call_16.json  call_17.json  call_18.json  call_19.json  call_20.json  call_21.json  call_22.json  call_23.json  call_24.json  call_25.json  call_26.json  call_27.json  call_28.json  call_29.json  call_30.json
docs/: smart_format_analysis.md
outputs/: optimization_report.json
src/phonebot/: __init__.py  utils.py
tests/: test_alerts.py  test_benchmark.py  test_classifier.py  test_cli.py  test_compare.py  test_cost_tracker.py  test_error_analysis.py  test_escalation.py  test_evaluation_metrics.py  test_extract.py  test_extract_v2.py  test_history.py  test_knowledge.py  test_latency.py  test_model_registry.py  test_observability.py  test_optimize.py  test_prompt_registry.py  test_prompts.py  test_regression.py  test_structured_logging.py  test_transcribe.py
(+104 files in other folders)
