[project]
name = "phonebot-challenge"
version = "0.1.0"
description = "Extract caller info from German phone bot recordings"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "phonenumbers>=9.0.26",
    "rich>=14.3.3",
    "python-dotenv>=1.2.2",
    "deepgram-sdk>=6.1.0",
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phonebot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
